<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
		<relativePath />
	</parent>

	<groupId>io.github.arlol</groupId>
	<artifactId>chorito</artifactId>
	<version>${revision}</version>

	<scm>
		<connection>scm:git:https://github.com/ArloL/chorito</connection>
		<developerConnection>scm:git:https://github.com/ArloL/chorito</developerConnection>
		<tag>${sha1}</tag>
		<url>https://github.com/ArloL/chorito</url>
	</scm>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<properties>
		<java.version>21</java.version>
		<sha1>HEAD</sha1>
		<revision>0.0.1-SNAPSHOT</revision>
		<platform>unknown</platform>
		<start-class>io.github.arlol.chorito.Main</start-class>
		<ec4j.version>2.2.2</ec4j.version>
		<project.build.outputTimestamp>2023-01-01T00:00:00Z</project.build.outputTimestamp>
	</properties>

	<profiles>
		<profile>
			<id>macos</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<platform>macos</platform>
			</properties>
		</profile>
		<profile>
			<id>unix</id>
			<activation>
				<os>
					<family>unix</family>
					<name>Linux</name>
				</os>
			</activation>
			<properties>
				<platform>linux</platform>
			</properties>
		</profile>
		<profile>
			<id>windows</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<platform>windows</platform>
			</properties>
		</profile>
		<profile>
			<id>graal</id>
			<activation>
				<file>
					<exists>${env.JAVA_HOME}/GRAALVM-README.md</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>build-native</id>
								<goals>
									<goal>compile-no-fork</goal>
								</goals>
								<phase>package</phase>
							</execution>
							<execution>
								<id>test-native</id>
								<goals>
									<goal>test</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<imageName>${project.artifactId}-${platform}-${project.version}</imageName>
							<metadataRepository>
								<enabled>true</enabled>
							</metadataRepository>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<configuration>
							<mainClass>${start-class}</mainClass>
							<arguments>
								<argument>-agentlib:native-image-agent=config-merge-dir=${project.basedir}/src/main/resources/META-INF/native-image</argument>
								<argument>-classpath</argument>
								<classpath />
								<argument>${start-class}</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>env-build-timestamp</id>
			<activation>
				<property>
					<name>env.BUILD_TIMESTAMP</name>
				</property>
			</activation>
			<properties>
				<project.build.outputTimestamp>${env.BUILD_TIMESTAMP}</project.build.outputTimestamp>
			</properties>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.ec4j.linters</groupId>
				<artifactId>editorconfig-linters-bom</artifactId>
				<version>${ec4j.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>7.0.0.202409031743-r</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
		</dependency>
		<dependency>
			<groupId>org.ec4j.linters</groupId>
			<artifactId>editorconfig-linters</artifactId>
		</dependency>
		<dependency>
			<groupId>org.snakeyaml</groupId>
			<artifactId>snakeyaml-engine</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.spotbugs</groupId>
			<artifactId>spotbugs-annotations</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.18.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.marschall</groupId>
			<artifactId>memoryfilesystem</artifactId>
			<version>2.8.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforcer-enforce</id>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<rules>
						<requireMavenVersion>
							<version>3.5</version>
						</requireMavenVersion>
						<requirePluginVersions />
						<bannedDependencies>
							<excludes>
								<!-- disallow all system scope dependencies -->
								<exclude>*:*:*:*:system</exclude>
							</excludes>
						</bannedDependencies>
						<reactorModuleConvergence />
						<banDuplicatePomDependencyVersions />
					</rules>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>de.smartics.rules</groupId>
						<artifactId>smartics-enforcer-rules</artifactId>
						<version>1.0.2</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten-clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten-flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>versions-set</id>
						<phase>process-resources</phase>
						<goals>
							<goal>set-property</goal>
						</goals>
						<configuration>
							<generateBackupPoms>false</generateBackupPoms>
							<newVersion>${project.build.outputTimestamp}</newVersion>
							<property>project.build.outputTimestamp</property>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>2.24.1</version>
				<configuration>
					<configFile>${project.basedir}/.settings/code-formatter-profile.xml</configFile>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.8.6.3</version>
				<configuration>
					<effort>Max</effort>
					<threshold>Low</threshold>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.gaul</groupId>
				<artifactId>modernizer-maven-plugin</artifactId>
				<version>2.9.0</version>
				<configuration>
					<javaVersion>${java.version}</javaVersion>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>modernizer</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.4.1</version>
				<configuration>
					<mainClass>${start-class}</mainClass>
					<executable>${env.JAVA_HOME}/bin/java</executable>
					<arguments>
						<argument>-classpath</argument>
						<classpath />
						<argument>${start-class}</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<configuration>
						<propertiesEncoding>ISO-8859-1</propertiesEncoding>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.20.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
